--- a/pom.xml
+++ b/pom.xml
@@ -37,18 +37,18 @@
       <version>3.4.5</version>
     </dependency>
 
-<!--    <dependency>-->
-<!--      <groupId>org.postgresql</groupId>-->
-<!--      <artifactId>postgresql</artifactId>-->
-<!--      <version>42.3.3</version>-->
-<!--    </dependency>-->
-
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.4.199</version>
-      <scope>runtime</scope>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.3.3</version>
     </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>com.h2database</groupId>-->
+<!--      <artifactId>h2</artifactId>-->
+<!--      <version>1.4.199</version>-->
+<!--      <scope>runtime</scope>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>junit</groupId>
